// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUpload shows an image upload and an error 1`] = `
<div
  className="form-group"
>
  <div
    name="imageSrc"
    tabIndex={-1}
  >
    <label
      className="w-100 p-0"
      htmlFor="image-with-error"
    >
      Image Error Test
    </label>
      
    <StatusAlert
      alertType="danger"
      className=""
      dismissible={false}
      iconClassNames={Array []}
      message="Required"
      onClose={[Function]}
      title={null}
    />
    <img
      alt=""
      className="uploaded-image"
      onLoad={[Function]}
      src={null}
    />
    <input
      accept="image/jpeg, image/png"
      disabled={false}
      id="image-with-error"
      onChange={[Function]}
      type="file"
    />
  </div>
</div>
`;

exports[`ImageUpload shows an image upload with no prior image 1`] = `
<div
  className="form-group"
>
  <div
    name="imageSrc"
    tabIndex={-1}
  >
    <label
      className="w-100 p-0"
      htmlFor="image-no-prior"
    >
      Course Image: *
    </label>
      
    <img
      alt=""
      className="uploaded-image"
      onLoad={[Function]}
      src={null}
    />
    <input
      accept="image/jpeg, image/png"
      disabled={false}
      id="image-no-prior"
      onChange={[Function]}
      type="file"
    />
  </div>
</div>
`;

exports[`ImageUpload shows an image upload with prior image 1`] = `
<div
  className="form-group"
>
  <div
    name="imageSrc"
    tabIndex={-1}
  >
    <label
      className="w-100 p-0"
      htmlFor="image-with-prior"
    >
      <strong>
        Course Image: *
      </strong>
    </label>
      
    <img
      alt=""
      className="uploaded-image"
      onLoad={[Function]}
      src="http://www.image.uploaded.source/view/image"
    />
    <input
      accept="image/jpeg, image/png"
      disabled={false}
      id="image-with-prior"
      onChange={[Function]}
      type="file"
    />
  </div>
</div>
`;
